# CROME

./: .gitignore  MIGRATION_PLAN.md  README.md  export_to_asset.py  gee_downloader.py  get_monthly_composite.py  get_monthly_composite.sh  get_satellite_embeddings.py  merge_samples.py  mkdocs.yml  pyproject.toml  reclassify_image.py  reclassify_image.sh  reclassify_image_tile.py  sample_spectra.py  sample_spectra_dask.ipynb  train_curf_old.py  train_ml.py  train_ml.sh  train_ml_per_tile.py  train_xgboost.py  train_xgboost.sh
.github/workflows/: ci.yml  docs.yml
docs/: architecture.md  cli.md  configuration.md  index.md  installation.md  migration.md  nextflow.md
nextflow/: england.nf  main.nf  nextflow.config
scripts/: run_england_2017_2024.py
src/crome/: __init__.py  bands.py  cli.py  cli_args.py  config.py  constants.py  discovery.py  features.py  labeling.py  manifest.py  orchestration.py  paths.py  pipeline.py  predict.py  qc.py  reference.py  runtime.py  schema.py  training.py  workflow.py
src/crome/acquisition/: __init__.py  alphaearth.py  crome.py
tests/: test_alphaearth_bands.py  test_alphaearth_config.py  test_alphaearth_download.py  test_alphaearth_errors.py  test_cli.py  test_crome_download.py  test_nextflow_workflow.py  test_orchestration.py  test_pipeline.py  test_reference.py  test_runtime.py
workflows/nextflow/: main.nf  nextflow.config
