[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crome"
version = "0.1.0"
description = "Migration scaffolding and acquisition helpers for UK crop mapping."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Marc Yin", email = "marcollinbobo@gmail.com" },
]
keywords = ["crop-mapping", "earth-engine", "alphaearth", "geospatial"]
dependencies = []

[project.optional-dependencies]
ee = [
  "edown>=0.1.0; python_version < '3.13'",
]
dev = [
  "build>=1.2",
  "pytest>=9",
  "ruff>=0.11",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
]

[project.scripts]
crome = "crome.cli:main"
crome-alphaearth-download = "crome.acquisition.alphaearth:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
